--- a/index.html
+++ b/index.html
@@ -7,125 +7,97 @@
 <style>
 *{
   box-sizing:border-box;
+  margin:0;
+  padding:0;
 }
 
 body{
-  margin:0;
   font-family:'Segoe UI', sans-serif;
   height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-
-  /* 🖼 Technology Background Image */
-  background: url("blue-artificial-intelligence-technology-background-hd-free-photo.jpg") no-repeat center center fixed;
-  background-size: cover;
+  background: url("blue-artificial-intelligence-technology-background.jpg");
+  background-size:cover;
+  background-position:center;
 }
 
-
-/* Chat Container */
-.chatbox{
+/* Main Chat Box */
+.chat-container{
   width:95%;
-  max-width:1100px;
-  height:85vh;
-  background:rgba(255,255,255,0.1);
-  backdrop-filter:blur(1px);
-  border-radius:25px;
+  max-width:900px;
+  height:95vh;
+  background:rgba(255,255,255,0.95);
+  border-radius:20px;
   display:flex;
   flex-direction:column;
-  box-shadow:0 20px 50px rgba(0,0,0,0.4);
   overflow:hidden;
-  border:1px solid rgba(255,255,255,0.2);
+  box-shadow:0 15px 40px rgba(0,0,0,0.3);
 }
 
 /* Header */
-.chatbox h3{
-  margin:0;
-  padding:18px;
-  background:rgba(0,0,0,0.3);
+.chat-header{
+  background:#8e8e8e;
   color:white;
-  letter-spacing:1px;
+  padding:15px;
+  font-size:18px;
+  font-weight:bold;
 }
 
 /* Chat Area */
-.chat{
+.chat-box{
   flex:1;
-  overflow-y:auto;
-  padding:25px;
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-}
-
-/* Messages */
-.message{
-  max-width:65%;
-  padding:12px 16px;
-  border-radius:15px;
-  font-size:20px;
-  animation:fadeIn 0.3s ease;
-}
-
-@keyframes fadeIn{
-  from{opacity:0; transform:translateY(8px);}
-  to{opacity:1; transform:translateY(0);}
-}
-
-.user{
-  align-self:flex-end;
-  background:#25d366;
-  color:white;
-  border-bottom-right-radius:5px;
-}
-
-.bot{
-  align-self:flex-start;
-  background:white;
-  border-bottom-left-radius:5px;
-}
-/* Input Area */
-.input-area{
-  display:flex;
   padding:15px;
-  background:rgba(0,0,0,0.3);
+  overflow-y:auto;
 }
 
-input{
+/* Input Area */
+.chat-input{
+  display:flex;
+  padding:10px;
+  gap:10px;
+  background:#ddd;
+}
+
+.chat-input input{
   flex:1;
-  padding:14px;
-  border-radius:30px;
+  padding:12px;
   border:none;
+  border-radius:25px;
   outline:none;
-  font-size:14px;
+  font-size:16px;
 }
 
-button{
-  margin-left:10px;
-  width:50px;
+.chat-input button{
+  padding:12px 15px;
   border:none;
   border-radius:50%;
-  background:#25d366;
-  color:white;
-  font-size:18px;
   cursor:pointer;
-  transition:0.3s;
+  font-size:16px;
 }
 
-button:hover{
-  transform:scale(1.1);
-}
+/* Mobile Optimization */
+@media (max-width:600px){
 
-.mic-listening{
-  background:red !important;
-  animation:pulse 1s infinite;
-}
+  .chat-container{
+    height:100vh;
+    border-radius:0;
+  }
 
-@keyframes pulse{
-  0%{transform:scale(1);}
-  50%{transform:scale(1.2);}
-  100%{transform:scale(1);}
-}
+  .chat-header{
+    font-size:16px;
+    padding:12px;
+  }
 
+  .chat-input input{
+    font-size:14px;
+    padding:10px;
+  }
+
+  .chat-input button{
+    padding:10px 12px;
+  }
+}
 </style>
 </head>
 
@@ -384,3 +356,4 @@ function startListening(){
 
 </body>
 </html>
+
