--- a/index.html
+++ b/index.html
@@ -7,97 +7,125 @@
 <style>
 *{
   box-sizing:border-box;
-  margin:0;
-  padding:0;
 }
 
 body{
+  margin:0;
   font-family:'Segoe UI', sans-serif;
   height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  background: url("blue-artificial-intelligence-technology-background.jpg");
-  background-size:cover;
-  background-position:center;
+
+  /* 🖼 Technology Background Image */
+  background: url("blue-artificial-intelligence-technology-background-hd-free-photo.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
-/* Main Chat Box */
-.chat-container{
+
+/* Chat Container */
+.chatbox{
   width:95%;
-  max-width:900px;
-  height:95vh;
-  background:rgba(255,255,255,0.95);
-  border-radius:20px;
+  max-width:1100px;
+  height:85vh;
+  background:rgba(255,255,255,0.1);
+  backdrop-filter:blur(1px);
+  border-radius:25px;
   display:flex;
   flex-direction:column;
+  box-shadow:0 20px 50px rgba(0,0,0,0.4);
   overflow:hidden;
-  box-shadow:0 15px 40px rgba(0,0,0,0.3);
+  border:1px solid rgba(255,255,255,0.2);
 }
 
 /* Header */
-.chat-header{
-  background:#8e8e8e;
+.chatbox h3{
+  margin:0;
+  padding:18px;
+  background:rgba(0,0,0,0.3);
   color:white;
-  padding:15px;
-  font-size:18px;
-  font-weight:bold;
+  letter-spacing:1px;
 }
 
 /* Chat Area */
-.chat-box{
+.chat{
   flex:1;
-  padding:15px;
   overflow-y:auto;
-}
-
-/* Input Area */
-.chat-input{
+  padding:25px;
   display:flex;
-  padding:10px;
+  flex-direction:column;
   gap:10px;
-  background:#ddd;
 }
 
-.chat-input input{
+/* Messages */
+.message{
+  max-width:65%;
+  padding:12px 16px;
+  border-radius:15px;
+  font-size:20px;
+  animation:fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn{
+  from{opacity:0; transform:translateY(8px);}
+  to{opacity:1; transform:translateY(0);}
+}
+
+.user{
+  align-self:flex-end;
+  background:#25d366;
+  color:white;
+  border-bottom-right-radius:5px;
+}
+
+.bot{
+  align-self:flex-start;
+  background:white;
+  border-bottom-left-radius:5px;
+}
+/* Input Area */
+.input-area{
+  display:flex;
+  padding:15px;
+  background:rgba(0,0,0,0.3);
+}
+
+input{
   flex:1;
-  padding:12px;
+  padding:14px;
+  border-radius:30px;
   border:none;
-  border-radius:25px;
   outline:none;
-  font-size:16px;
+  font-size:14px;
 }
 
-.chat-input button{
-  padding:12px 15px;
+button{
+  margin-left:10px;
+  width:50px;
   border:none;
   border-radius:50%;
+  background:#25d366;
+  color:white;
+  font-size:18px;
   cursor:pointer;
-  font-size:16px;
+  transition:0.3s;
 }
 
-/* Mobile Optimization */
-@media (max-width:600px){
-
-  .chat-container{
-    height:100vh;
-    border-radius:0;
-  }
-
-  .chat-header{
-    font-size:16px;
-    padding:12px;
-  }
-
-  .chat-input input{
-    font-size:14px;
-    padding:10px;
-  }
-
-  .chat-input button{
-    padding:10px 12px;
-  }
+button:hover{
+  transform:scale(1.1);
 }
+
+.mic-listening{
+  background:red !important;
+  animation:pulse 1s infinite;
+}
+
+@keyframes pulse{
+  0%{transform:scale(1);}
+  50%{transform:scale(1.2);}
+  100%{transform:scale(1);}
+}
+
 </style>
 </head>
 
@@ -356,4 +384,3 @@ function startListening(){
 
 </body>
 </html>
-
