--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Brainy – AI School Chatbot</title>
 
 <style>
@@ -432,4 +433,5 @@ function startListening(){
 
 </body>
 </html>
+
 
