--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@ emoji="🎵";
 
       // 🌟 GK Questions
       "national animal of india": "The national animal of India is the Bengal Tiger.",
+      "time": new Date().toLocaleTimeString(),
+      "date": new Date().toLocaleDateString(),
       "be my friend": "Yes, but as a Virtual friend.",
       "national bird of india": "The national bird of India is the Peacock.",
       "are you human": "No 😄 I am Brainy, a smart AI chatbot.",
@@ -433,6 +435,7 @@ function startListening(){
 
 </body>
 </html>
+
 
 
 
