--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ function reply(){
   box.value="";
 
   let t=input.toLowerCase();
-  let r="madharchod✌️";
+  let r="I am under development and expanding my knowledge✌️";
   let emoji="🤖";
 
 
@@ -435,6 +435,7 @@ function startListening(){
 
 </body>
 </html>
+
 
 
 
