--- a/index.html
+++ b/index.html
@@ -312,6 +312,9 @@ emoji="🎵";
       "federalism": "Federalism is a system of government in which power is divided between the central government and state governments. In countries like India,both levels of government have their own powers given by the Constitution.",
       "rights": "Human rights are the basic rights and freedoms that every person has simply because they are human. These rights include the right to life, freedom, equality, and education.",
       "duties": "Duties are responsibilities citizens must perform.",
+      "AI": "The ability of a computer or machine that would normally require human intelligence.",
+      "machine learning": "A type of AI Where computer improves performance by learning from data.",
+      "neural network": "AI system designed to stimulate the human brain structure to recognize pattern.",
       "independence": "India gained independence on 15 August 1947.",
       "constitution day": "Constitution Day is celebrated on 26 November.",
       "cold war": "The Cold War was a period of political tension and rivalry between the United States and the Soviet Union after World War II. It was called a “cold” war because there was no direct large-scale fighting between the two countries, but there was strong competition in politics, weapons, and space.",
@@ -435,6 +438,7 @@ function startListening(){
 
 </body>
 </html>
+
 
 
 
