--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@ emoji="🎵";
       "duties": "Duties are responsibilities citizens must perform.",
       "AI": "The ability of a computer or machine that would normally require human intelligence.",
       "machine learning": "A type of AI Where computer improves performance by learning from data.",
+      "natural language processing": "AI that allows computers to understand & interact using human language.",
+      "AI helps in different areas": "It helps in entertainig us, in healthcare, and in communication.",
       "neural network": "AI system designed to stimulate the human brain structure to recognize pattern.",
       "independence": "India gained independence on 15 August 1947.",
       "constitution day": "Constitution Day is celebrated on 26 November.",
@@ -438,6 +440,7 @@ function startListening(){
 
 </body>
 </html>
+
 
 
 
