--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@ I am your Brainy, friend to all.`;
 emoji="🎵";
 }
 
+     
 
   else if(t === "z" || t === "hello" || t === "hey" || t.includes("hello"))
 {
@@ -276,6 +277,7 @@ emoji="🎵";
   }
   else{
     const qa = {
+
 
       // 🌟 GK Questions
       "national animal of india": "The national animal of India is the Bengal Tiger.",
@@ -386,7 +388,19 @@ emoji="🎵";
     }
   }
 
- function speakPoem(text){
+  setTimeout(() => {
+    addMessage("Brainy", r + " " + emoji, "bot");
+
+    if(poemMode){
+      speakPoem(r);
+    } else {
+      speak(r);
+    }
+
+  }, 500);
+
+} 
+function speakPoem(text){
   speechSynthesis.cancel();
   let lines = text.split("\n");
   let i = 0;
@@ -395,10 +409,9 @@ emoji="🎵";
     if(i < lines.length){
       let utter = new SpeechSynthesisUtterance(lines[i]);
       utter.lang="en-US";
-      utter.rate = 0.75;   // slower for rhythm
-      utter.pitch = 1.3;   // little musical tone
-
-      utter.onend = speakLine;  // wait until line finishes
+      utter.rate = 0.75;
+      utter.pitch = 1.3;
+      utter.onend = speakLine;
       speechSynthesis.speak(utter);
       i++;
     }
@@ -458,6 +471,7 @@ function startListening(){
 
 </body>
 </html>
+
 
 
 
