--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ emoji="🎵";
       "are you teacher": "I am your study buddy 📚.",
       "national flower of india": "The national flower of India is the Lotus.",
       "national anthem of india": "The national anthem of India is Jana Gana Mana.",
-      "how are you": "I am fine,thank you for asking me.",
+      "how are you": "I am fine,thank you for asking me. What about you ?",
       "father of computer": "Charles Babbage is father of computer.",
       "national song of india": "The national song of India is Vande Mataram.",
       "capital of india": "The capital of India is New Delhi.",
@@ -451,3 +451,4 @@ function startListening(){
 
 </body>
 </html>
+
