--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@ emoji="🎵";
       "national flower of india": "The national flower of India is the Lotus.",
       "national anthem of india": "The national anthem of India is Jana Gana Mana.",
       "how are you": "I am fine,thank you for asking me. What about you ?",
+      "i am also fine": "How can I help you today ?",
       "father of computer": "Charles Babbage is father of computer.",
       "national song of india": "The national song of India is Vande Mataram.",
       "capital of india": "The capital of India is New Delhi.",
@@ -451,4 +452,5 @@ function startListening(){
 
 </body>
 </html>
+
 
